# speech-datasets

./: .gitignore  plot_speakers.py  preprocess_librispeech.py  preprocess_libritts.py  preprocess_libritts1.py  pyproject.toml  requirements.txt  tar_all.sh  test.py  test_fill.py
librispeech_asr/: librispeech_asr.py
speech_datasets/: __init__.py
src/speech_datasets/: __init__.py
